# robot_ws

src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/launch/: real_robot.launch.py  sim_robot.launch.py
src/robot_controller/: CMakeLists.txt  package.xml
src/robot_controller/config/: joy_teleop.yaml  robot_controllers.yaml
src/robot_controller/include/robot_controller/: controller.hpp
src/robot_controller/launch/: controller.launch.py  joystick_teleop.launch.py
src/robot_controller/robot_controller/: mpc.py
src/robot_controller/src/: controller.cpp
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: display.launch.py  gazebo.launch.py
src/robot_description/rviz/: display.rviz
src/robot_description/urdf/: materials.xacro  robot.urdf.xacro  robot_gazebo.xacro  robot_imu.xacro  robot_lidar.xacro  robot_ros2_control.xacro
src/robot_firmware/: CMakeLists.txt  package.xml
src/robot_firmware/firmware/: encoder_reader.ino  motor_control.ino  robot_control.ino  serial_receiver.ino  serial_transmitter.ino
src/robot_firmware/include/robot_firmware/: interface.hpp
src/robot_firmware/launch/: hardware_interfaces.launch.py
src/robot_firmware/src/: interface.cpp  mpu6050_driver.cpp  robot_interface.xml  serial_receiver.cpp  serial_transmitter.cpp
